--- a/2024-03-15.md
+++ b/2024-03-15.md
@@ -2,7 +2,7 @@
 
 ## Overview
 
-This release was heavily focused on refactoring to improve performance and productivity as well as build out the necessary infrastructure to support multi-fill which we aim to enable soon. See our Discord communication for more details.
+This release was focused on refactoring to improve performance and productivity as well as building out the necessary infrastructure to support multi-fill which we aim to enable soon. See our Discord communication for more details.
 
 ## What's New
 
